- Fix animation on login modal 	- removed a bad crossfade showing up before the animation was complete 	- Fix flicker on input fields when animating the modal in.

--- a/app/styles/_form-input-styles.scss
+++ b/app/styles/_form-input-styles.scss
@@ -87,7 +87,7 @@ TEXT INPUT STYLES
 
 .cds-form {
   input[type="text"], input[type="password"], input[type="email"] {
-    transition: .04s all linear;
+    transition: .04s color linear, .04s background-color linear, .04s border linear;    
     color: nth($purple-list, 4);
     font-family: Roboto;
     &::-webkit-input-placeholder {
@@ -106,7 +106,7 @@ TEXT INPUT STYLES
       opacity: 1;
     }
   }
-  input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
+  input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {    
     &::-webkit-input-placeholder {
       color: transparent;
     }
